Fix button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,7 @@
 #hero img {
     height: 50%;
 }
+
+.index-btn{
+    width: 100%;
+}
